<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidEiT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="main_hot_new_label">Ostatnie wiadomości!</string>
    <string name="main_closest_lessons">Najbliższe zajęcia</string>
    <string name="main_author">autor: </string>
    <string name="start_create_account">Utwórz konto</string>
    <string name="start_login">Zaloguj</string>
    <string name="register_email">Email</string>
    <string name="register_password">Hasło</string>
    <string name="register_nick">Nazwa użytkownika</string>
    <string name="welcome_text">Rejestracja użytkownika</string>
    <string name="schedule_change_group">Zmien grupe</string>
    <string name="schedule_change_week">Zmien tydzien</string>
    <string name="register_btn_register">Zarejstruj</string>
    <string name="main_not_lesson_today">Nie masz już dzisiaj zajęć</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="channels_title">Twoje rozmowy</string>
    <string name="channel_server_error">Błąd połączenia /n Nie można połączyć się z serwerem</string>
    <string name="channel_subscribing_error">Nie można subskrybuować kanału. Spróbuj ponownie.</string>
    <string name="message_input_hint">Co się dzieje?</string>
    <string name="subscribe_info">Subskrybując ten kanał będziesz otrzymyał powiadomienia o nowych wiadomościach.</string>
    <string name="unsubscribe_info">Nie będziesz już dłużej informowany o nowych wiadomościach tego kanału.</string>

</resources>
