<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity" >


    <ImageView
        android:id="@+id/home"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageView
        android:layout_marginTop="40dp"
        android:src="@drawable/et_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <View
        android:layout_above="@+id/start_button_container"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/start_button_container"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:padding="8dp"
            android:background="@drawable/btn_action_item_background_transparent"
            android:textColor="@android:color/white"
            android:id="@+id/start_create"
            android:text="@string/start_create_account"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:padding="8dp"
            android:background="@drawable/btn_action_item_background_transparent"
            android:textColor="@android:color/white"
            android:id="@+id/start_login"
            android:text="@string/start_login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</RelativeLayout>
