<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.eit.androideit.eit.MainActivity">

    <LinearLayout
        android:id="@+id/main_ll_base"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bck_ll"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/MainHeadling"
                android:text="@string/main_hot_new_label" />

            <LinearLayout
                style="@style/Base"
                android:orientation="vertical">

                <TableRow
                    style="@style/Base"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/MainMessage"
                        android:text="@string/main_author" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="Paweł"
                        android:textColor="@color/font"
                        android:textSize="25sp"
                        android:textStyle="italic" />

                    <TextView
                        style="@style/MainMessage"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="godz.15:30, 17.03.14"
                        android:textSize="12sp" />
                </TableRow>

                <LinearLayout
                    style="@style/Base"
                    android:layout_margin="15dp"
                    android:background="@color/bck_message"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/Base"
                        android:text="Ta apka jest zaje..... :)"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/Base"
            android:layout_marginTop="15dp"
            android:background="@color/bck_ll"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/MainHeadling"
                android:text="@string/main_closest_lessons" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/schedule_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/base_schedule_list_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
